set(CMAKE_CXX_STANDARD 11)

# hw 10-1-1 class_function
add_executable(class_function class_function_main.cc class_function.cc)

# hw 10-1-2 cast_quiz
add_executable(cast_quiz cast_quiz.cc)

# hw 10-1-3 dynamic_cast
add_executable(dynamic_cast dynamic_cast_main.cc dynamic_cast.cc)

# hw 10-1-4 shapes
add_executable(shapes shapes_main.cc shapes.cc)